--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -925,6 +925,7 @@ deny 204.8.96.83;
 deny 204.8.96.84;
 deny 204.8.96.85;
 deny 204.8.96.86;
+deny 204.8.96.87;
 deny 204.8.96.88;
 deny 204.8.96.89;
 deny 205.185.113.180;
@@ -1233,6 +1234,7 @@ deny 2620:7:6001::ffff:c759:e653;
 deny 2620:7:6001::ffff:c759:e654;
 deny 2620:7:6001::ffff:c759:e655;
 deny 2620:7:6001::ffff:c759:e656;
+deny 2620:7:6001::ffff:c759:e657;
 deny 2620:7:6001::ffff:c759:e658;
 deny 2620:7:6001::ffff:c759:e659;
 deny 27.255.75.198;
@@ -1621,7 +1623,6 @@ deny 37.252.255.135;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.97.116.244;
-deny 44.194.6.103;
 deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
@@ -1750,6 +1751,7 @@ deny 5.255.99.124;
 deny 5.255.99.147;
 deny 5.255.99.5;
 deny 5.2.67.226;
+deny 52.6.90.176;
 deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
@@ -1815,6 +1817,7 @@ deny 82.153.138.182;
 deny 82.221.131.5;
 deny 82.221.131.71;
 deny 82.221.139.190;
+deny 82.68.49.227;
 deny 83.217.9.73;
 deny 83.96.213.63;
 deny 83.97.20.77;
