--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -326,6 +326,7 @@ allow 185.220.100.253;
 allow 185.220.100.254;
 allow 185.220.100.255;
 allow 185.220.101.0;
+allow 185.220.101.1;
 allow 185.220.101.10;
 allow 185.220.101.100;
 allow 185.220.101.101;
@@ -925,6 +926,7 @@ allow 204.8.96.83;
 allow 204.8.96.84;
 allow 204.8.96.85;
 allow 204.8.96.86;
+allow 204.8.96.87;
 allow 204.8.96.88;
 allow 204.8.96.89;
 allow 205.185.113.180;
@@ -944,7 +946,6 @@ allow 209.141.38.110;
 allow 209.141.46.203;
 allow 209.141.50.178;
 allow 209.141.51.180;
-allow 209.141.51.217;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.55.26;
@@ -1056,7 +1057,6 @@ allow 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 allow 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
 allow 2605:6400:10:c39:3b1c:a9d9:fb78:d7f1;
 allow 2605:6400:20:104e::2;
-allow 2605:6400:20:13:3176:77cb:5e2e:88b6;
 allow 2605:6400:20:1a8:f5f2:4a28:b5ed:931d;
 allow 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 allow 2605:6400:20:2417::69;
@@ -1235,6 +1235,7 @@ allow 2620:7:6001::ffff:c759:e653;
 allow 2620:7:6001::ffff:c759:e654;
 allow 2620:7:6001::ffff:c759:e655;
 allow 2620:7:6001::ffff:c759:e656;
+allow 2620:7:6001::ffff:c759:e657;
 allow 2620:7:6001::ffff:c759:e658;
 allow 2620:7:6001::ffff:c759:e659;
 allow 27.255.75.198;
@@ -1342,7 +1343,6 @@ allow 2a04:52c0:108:4b9e::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
-allow 2a04:52c0:120:a13d::1;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
@@ -1396,6 +1396,7 @@ allow 2a0b:f4c0:16c:7::1;
 allow 2a0b:f4c0:16c:8::1;
 allow 2a0b:f4c0:16c:9::1;
 allow 2a0b:f4c2::;
+allow 2a0b:f4c2::1;
 allow 2a0b:f4c2::10;
 allow 2a0b:f4c2::11;
 allow 2a0b:f4c2:1::128;
@@ -1609,8 +1610,8 @@ allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.42.185.134;
-allow 3.209.183.86;
 allow 35.0.127.52;
+allow 35.169.207.50;
 allow 37.1.201.144;
 allow 37.120.239.59;
 allow 37.187.5.192;
@@ -1731,7 +1732,6 @@ allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
 allow 5.255.114.171;
-allow 5.255.115.42;
 allow 5.255.115.58;
 allow 5.255.117.56;
 allow 5.255.118.244;
@@ -1805,6 +1805,7 @@ allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
 allow 80.82.78.14;
+allow 81.16.33.42;
 allow 81.17.28.95;
 allow 82.118.242.158;
 allow 82.118.242.36;
