--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -326,6 +326,7 @@ deny 185.220.100.253;
 deny 185.220.100.254;
 deny 185.220.100.255;
 deny 185.220.101.0;
+deny 185.220.101.1;
 deny 185.220.101.10;
 deny 185.220.101.100;
 deny 185.220.101.101;
@@ -925,6 +926,7 @@ deny 204.8.96.83;
 deny 204.8.96.84;
 deny 204.8.96.85;
 deny 204.8.96.86;
+deny 204.8.96.87;
 deny 204.8.96.88;
 deny 204.8.96.89;
 deny 205.185.113.180;
@@ -944,7 +946,6 @@ deny 209.141.38.110;
 deny 209.141.46.203;
 deny 209.141.50.178;
 deny 209.141.51.180;
-deny 209.141.51.217;
 deny 209.141.51.30;
 deny 209.141.54.203;
 deny 209.141.55.26;
@@ -1056,7 +1057,6 @@ deny 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 deny 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
 deny 2605:6400:10:c39:3b1c:a9d9:fb78:d7f1;
 deny 2605:6400:20:104e::2;
-deny 2605:6400:20:13:3176:77cb:5e2e:88b6;
 deny 2605:6400:20:1a8:f5f2:4a28:b5ed:931d;
 deny 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 deny 2605:6400:20:2417::69;
@@ -1235,6 +1235,7 @@ deny 2620:7:6001::ffff:c759:e653;
 deny 2620:7:6001::ffff:c759:e654;
 deny 2620:7:6001::ffff:c759:e655;
 deny 2620:7:6001::ffff:c759:e656;
+deny 2620:7:6001::ffff:c759:e657;
 deny 2620:7:6001::ffff:c759:e658;
 deny 2620:7:6001::ffff:c759:e659;
 deny 27.255.75.198;
@@ -1342,7 +1343,6 @@ deny 2a04:52c0:108:4b9e::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:119:3f0b::1;
-deny 2a04:52c0:120:a13d::1;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
 deny 2a04:9dc0:31::c0cc:4d;
@@ -1396,6 +1396,7 @@ deny 2a0b:f4c0:16c:7::1;
 deny 2a0b:f4c0:16c:8::1;
 deny 2a0b:f4c0:16c:9::1;
 deny 2a0b:f4c2::;
+deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
 deny 2a0b:f4c2::11;
 deny 2a0b:f4c2:1::128;
@@ -1609,8 +1610,8 @@ deny 2a12:8641:3:24::;
 deny 2a12:a800:2:1:45:138:16:203;
 deny 31.129.22.65;
 deny 31.42.185.134;
-deny 3.209.183.86;
 deny 35.0.127.52;
+deny 35.169.207.50;
 deny 37.1.201.144;
 deny 37.120.239.59;
 deny 37.187.5.192;
@@ -1731,7 +1732,6 @@ deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
 deny 5.255.114.171;
-deny 5.255.115.42;
 deny 5.255.115.58;
 deny 5.255.117.56;
 deny 5.255.118.244;
@@ -1805,6 +1805,7 @@ deny 80.241.60.207;
 deny 80.67.167.81;
 deny 80.67.172.162;
 deny 80.82.78.14;
+deny 81.16.33.42;
 deny 81.17.28.95;
 deny 82.118.242.158;
 deny 82.118.242.36;
