--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -163,7 +163,6 @@ deny 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 deny 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
 deny 2605:6400:10:c39:3b1c:a9d9:fb78:d7f1;
 deny 2605:6400:20:104e::2;
-deny 2605:6400:20:13:3176:77cb:5e2e:88b6;
 deny 2605:6400:20:1a8:f5f2:4a28:b5ed:931d;
 deny 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 deny 2605:6400:20:2417::69;
@@ -342,6 +341,7 @@ deny 2620:7:6001::ffff:c759:e653;
 deny 2620:7:6001::ffff:c759:e654;
 deny 2620:7:6001::ffff:c759:e655;
 deny 2620:7:6001::ffff:c759:e656;
+deny 2620:7:6001::ffff:c759:e657;
 deny 2620:7:6001::ffff:c759:e658;
 deny 2620:7:6001::ffff:c759:e659;
 deny 2800:ba0:6:c1::4858;
@@ -448,7 +448,6 @@ deny 2a04:52c0:108:4b9e::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:119:3f0b::1;
-deny 2a04:52c0:120:a13d::1;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
 deny 2a04:9dc0:31::c0cc:4d;
@@ -502,6 +501,7 @@ deny 2a0b:f4c0:16c:7::1;
 deny 2a0b:f4c0:16c:8::1;
 deny 2a0b:f4c0:16c:9::1;
 deny 2a0b:f4c2::;
+deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
 deny 2a0b:f4c2::11;
 deny 2a0b:f4c2:1::128;
