--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,4 +1,3 @@
-allow 100.28.152.74;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 103.109.101.105;
@@ -144,7 +143,6 @@ allow 146.59.234.220;
 allow 146.59.35.246;
 allow 146.59.35.38;
 allow 146.70.164.210;
-allow 146.70.81.186;
 allow 147.45.116.145;
 allow 147.45.78.34;
 allow 149.202.79.101;
@@ -507,7 +505,6 @@ allow 185.241.208.196;
 allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
-allow 185.241.208.212;
 allow 185.241.208.232;
 allow 185.241.208.236;
 allow 185.241.208.243;
@@ -732,6 +729,7 @@ allow 2001:678:e3c::a;
 allow 2001:678:e3c::b;
 allow 2001:678:e3c::c;
 allow 2001:678:e3c::d;
+allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
 allow 2001:67c:289c:2::234;
@@ -829,106 +827,11 @@ allow 204.8.156.142;
 allow 204.85.191.7;
 allow 204.85.191.8;
 allow 204.85.191.9;
-allow 204.8.96.100;
-allow 204.8.96.101;
-allow 204.8.96.102;
-allow 204.8.96.103;
-allow 204.8.96.104;
-allow 204.8.96.105;
-allow 204.8.96.106;
-allow 204.8.96.107;
-allow 204.8.96.108;
-allow 204.8.96.109;
-allow 204.8.96.110;
-allow 204.8.96.111;
-allow 204.8.96.112;
-allow 204.8.96.113;
-allow 204.8.96.114;
-allow 204.8.96.115;
-allow 204.8.96.116;
-allow 204.8.96.117;
-allow 204.8.96.118;
-allow 204.8.96.119;
-allow 204.8.96.120;
-allow 204.8.96.121;
-allow 204.8.96.122;
-allow 204.8.96.123;
-allow 204.8.96.140;
-allow 204.8.96.141;
-allow 204.8.96.142;
-allow 204.8.96.143;
-allow 204.8.96.144;
-allow 204.8.96.145;
-allow 204.8.96.146;
-allow 204.8.96.147;
-allow 204.8.96.148;
-allow 204.8.96.149;
-allow 204.8.96.150;
-allow 204.8.96.151;
-allow 204.8.96.152;
-allow 204.8.96.153;
-allow 204.8.96.154;
-allow 204.8.96.155;
-allow 204.8.96.156;
-allow 204.8.96.157;
-allow 204.8.96.158;
-allow 204.8.96.159;
-allow 204.8.96.160;
-allow 204.8.96.161;
-allow 204.8.96.162;
-allow 204.8.96.163;
-allow 204.8.96.164;
-allow 204.8.96.165;
-allow 204.8.96.166;
-allow 204.8.96.167;
-allow 204.8.96.168;
-allow 204.8.96.169;
-allow 204.8.96.170;
-allow 204.8.96.171;
-allow 204.8.96.172;
-allow 204.8.96.173;
-allow 204.8.96.174;
-allow 204.8.96.175;
-allow 204.8.96.176;
-allow 204.8.96.177;
-allow 204.8.96.178;
-allow 204.8.96.179;
-allow 204.8.96.180;
-allow 204.8.96.181;
-allow 204.8.96.182;
-allow 204.8.96.183;
 allow 204.8.96.184;
 allow 204.8.96.185;
 allow 204.8.96.186;
 allow 204.8.96.187;
 allow 204.8.96.188;
-allow 204.8.96.189;
-allow 204.8.96.64;
-allow 204.8.96.65;
-allow 204.8.96.66;
-allow 204.8.96.67;
-allow 204.8.96.68;
-allow 204.8.96.69;
-allow 204.8.96.70;
-allow 204.8.96.71;
-allow 204.8.96.72;
-allow 204.8.96.73;
-allow 204.8.96.74;
-allow 204.8.96.75;
-allow 204.8.96.76;
-allow 204.8.96.77;
-allow 204.8.96.78;
-allow 204.8.96.79;
-allow 204.8.96.80;
-allow 204.8.96.81;
-allow 204.8.96.82;
-allow 204.8.96.83;
-allow 204.8.96.84;
-allow 204.8.96.85;
-allow 204.8.96.86;
-allow 204.8.96.87;
-allow 204.8.96.88;
-allow 204.8.96.89;
 allow 205.185.113.180;
 allow 205.185.115.216;
 allow 205.185.116.34;
@@ -1138,106 +1041,11 @@ allow 2607:5300:205:200::4894;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
 allow 2607:f530:8002::19;
-allow 2620:7:6001::101;
-allow 2620:7:6001::102;
-allow 2620:7:6001::103;
-allow 2620:7:6001::104;
-allow 2620:7:6001::105;
-allow 2620:7:6001::106;
-allow 2620:7:6001::107;
-allow 2620:7:6001::108;
-allow 2620:7:6001::109;
-allow 2620:7:6001::110;
-allow 2620:7:6001::111;
-allow 2620:7:6001::112;
-allow 2620:7:6001::113;
-allow 2620:7:6001::114;
-allow 2620:7:6001::115;
-allow 2620:7:6001::116;
-allow 2620:7:6001::117;
-allow 2620:7:6001::118;
-allow 2620:7:6001::119;
-allow 2620:7:6001::120;
-allow 2620:7:6001::121;
-allow 2620:7:6001::122;
-allow 2620:7:6001::123;
-allow 2620:7:6001::140;
-allow 2620:7:6001::141;
-allow 2620:7:6001::142;
-allow 2620:7:6001::143;
-allow 2620:7:6001::144;
-allow 2620:7:6001::145;
-allow 2620:7:6001::146;
-allow 2620:7:6001::147;
-allow 2620:7:6001::148;
-allow 2620:7:6001::149;
-allow 2620:7:6001::150;
-allow 2620:7:6001::151;
-allow 2620:7:6001::152;
-allow 2620:7:6001::153;
-allow 2620:7:6001::154;
-allow 2620:7:6001::155;
-allow 2620:7:6001::156;
-allow 2620:7:6001::157;
-allow 2620:7:6001::158;
-allow 2620:7:6001::159;
-allow 2620:7:6001::160;
-allow 2620:7:6001::161;
-allow 2620:7:6001::162;
-allow 2620:7:6001::163;
-allow 2620:7:6001::164;
-allow 2620:7:6001::165;
-allow 2620:7:6001::166;
-allow 2620:7:6001::167;
-allow 2620:7:6001::168;
-allow 2620:7:6001::169;
-allow 2620:7:6001::170;
-allow 2620:7:6001::171;
-allow 2620:7:6001::172;
-allow 2620:7:6001::173;
-allow 2620:7:6001::174;
-allow 2620:7:6001::175;
-allow 2620:7:6001::176;
-allow 2620:7:6001::177;
-allow 2620:7:6001::178;
-allow 2620:7:6001::179;
-allow 2620:7:6001::180;
-allow 2620:7:6001::181;
-allow 2620:7:6001::182;
-allow 2620:7:6001::183;
 allow 2620:7:6001::184;
 allow 2620:7:6001::185;
 allow 2620:7:6001::186;
 allow 2620:7:6001::187;
 allow 2620:7:6001::188;
-allow 2620:7:6001::189;
-allow 2620:7:6001::e664;
-allow 2620:7:6001::ffff:c759:e640;
-allow 2620:7:6001::ffff:c759:e641;
-allow 2620:7:6001::ffff:c759:e642;
-allow 2620:7:6001::ffff:c759:e643;
-allow 2620:7:6001::ffff:c759:e644;
-allow 2620:7:6001::ffff:c759:e645;
-allow 2620:7:6001::ffff:c759:e646;
-allow 2620:7:6001::ffff:c759:e647;
-allow 2620:7:6001::ffff:c759:e648;
-allow 2620:7:6001::ffff:c759:e649;
-allow 2620:7:6001::ffff:c759:e64a;
-allow 2620:7:6001::ffff:c759:e64b;
-allow 2620:7:6001::ffff:c759:e64c;
-allow 2620:7:6001::ffff:c759:e64d;
-allow 2620:7:6001::ffff:c759:e64e;
-allow 2620:7:6001::ffff:c759:e64f;
-allow 2620:7:6001::ffff:c759:e650;
-allow 2620:7:6001::ffff:c759:e651;
-allow 2620:7:6001::ffff:c759:e652;
-allow 2620:7:6001::ffff:c759:e653;
-allow 2620:7:6001::ffff:c759:e654;
-allow 2620:7:6001::ffff:c759:e655;
-allow 2620:7:6001::ffff:c759:e656;
-allow 2620:7:6001::ffff:c759:e657;
-allow 2620:7:6001::ffff:c759:e658;
-allow 2620:7:6001::ffff:c759:e659;
 allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
 allow 2a00:11c0:1c:311::5;
@@ -1723,6 +1531,7 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.44.122.243;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
@@ -1793,6 +1602,7 @@ allow 77.48.28.193;
 allow 77.48.28.204;
 allow 77.48.28.236;
 allow 77.48.28.237;
+allow 77.48.28.239;
 allow 77.81.247.72;
 allow 77.91.85.147;
 allow 77.91.86.95;
@@ -1865,6 +1675,7 @@ allow 91.139.160.150;
 allow 91.202.5.104;
 allow 91.203.144.194;
 allow 91.203.145.116;
+allow 91.206.26.26;
 allow 91.208.197.144;
 allow 91.208.75.153;
 allow 91.208.75.156;
@@ -1921,7 +1732,6 @@ allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
 allow 95.164.4.104;
-allow 95.164.46.204;
 allow 95.168.173.143;
 allow 95.211.210.103;
 allow 95.211.244.28;
