--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1,4 +1,3 @@
-set_real_ip_from 100.28.152.74;
 set_real_ip_from 102.130.113.9;
 set_real_ip_from 102.130.117.167;
 set_real_ip_from 103.109.101.105;
@@ -144,7 +143,6 @@ set_real_ip_from 146.59.234.220;
 set_real_ip_from 146.59.35.246;
 set_real_ip_from 146.59.35.38;
 set_real_ip_from 146.70.164.210;
-set_real_ip_from 146.70.81.186;
 set_real_ip_from 147.45.116.145;
 set_real_ip_from 147.45.78.34;
 set_real_ip_from 149.202.79.101;
@@ -507,7 +505,6 @@ set_real_ip_from 185.241.208.196;
 set_real_ip_from 185.241.208.202;
 set_real_ip_from 185.241.208.204;
 set_real_ip_from 185.241.208.206;
-set_real_ip_from 185.241.208.212;
 set_real_ip_from 185.241.208.232;
 set_real_ip_from 185.241.208.236;
 set_real_ip_from 185.241.208.243;
@@ -732,6 +729,7 @@ set_real_ip_from 2001:678:e3c::a;
 set_real_ip_from 2001:678:e3c::b;
 set_real_ip_from 2001:678:e3c::c;
 set_real_ip_from 2001:678:e3c::d;
+set_real_ip_from 2001:67c:2044:1905::26;
 set_real_ip_from 2001:67c:2608::1;
 set_real_ip_from 2001:67c:289c::20;
 set_real_ip_from 2001:67c:289c:2::234;
@@ -829,106 +827,11 @@ set_real_ip_from 204.8.156.142;
 set_real_ip_from 204.85.191.7;
 set_real_ip_from 204.85.191.8;
 set_real_ip_from 204.85.191.9;
-set_real_ip_from 204.8.96.100;
-set_real_ip_from 204.8.96.101;
-set_real_ip_from 204.8.96.102;
-set_real_ip_from 204.8.96.103;
-set_real_ip_from 204.8.96.104;
-set_real_ip_from 204.8.96.105;
-set_real_ip_from 204.8.96.106;
-set_real_ip_from 204.8.96.107;
-set_real_ip_from 204.8.96.108;
-set_real_ip_from 204.8.96.109;
-set_real_ip_from 204.8.96.110;
-set_real_ip_from 204.8.96.111;
-set_real_ip_from 204.8.96.112;
-set_real_ip_from 204.8.96.113;
-set_real_ip_from 204.8.96.114;
-set_real_ip_from 204.8.96.115;
-set_real_ip_from 204.8.96.116;
-set_real_ip_from 204.8.96.117;
-set_real_ip_from 204.8.96.118;
-set_real_ip_from 204.8.96.119;
-set_real_ip_from 204.8.96.120;
-set_real_ip_from 204.8.96.121;
-set_real_ip_from 204.8.96.122;
-set_real_ip_from 204.8.96.123;
-set_real_ip_from 204.8.96.140;
-set_real_ip_from 204.8.96.141;
-set_real_ip_from 204.8.96.142;
-set_real_ip_from 204.8.96.143;
-set_real_ip_from 204.8.96.144;
-set_real_ip_from 204.8.96.145;
-set_real_ip_from 204.8.96.146;
-set_real_ip_from 204.8.96.147;
-set_real_ip_from 204.8.96.148;
-set_real_ip_from 204.8.96.149;
-set_real_ip_from 204.8.96.150;
-set_real_ip_from 204.8.96.151;
-set_real_ip_from 204.8.96.152;
-set_real_ip_from 204.8.96.153;
-set_real_ip_from 204.8.96.154;
-set_real_ip_from 204.8.96.155;
-set_real_ip_from 204.8.96.156;
-set_real_ip_from 204.8.96.157;
-set_real_ip_from 204.8.96.158;
-set_real_ip_from 204.8.96.159;
-set_real_ip_from 204.8.96.160;
-set_real_ip_from 204.8.96.161;
-set_real_ip_from 204.8.96.162;
-set_real_ip_from 204.8.96.163;
-set_real_ip_from 204.8.96.164;
-set_real_ip_from 204.8.96.165;
-set_real_ip_from 204.8.96.166;
-set_real_ip_from 204.8.96.167;
-set_real_ip_from 204.8.96.168;
-set_real_ip_from 204.8.96.169;
-set_real_ip_from 204.8.96.170;
-set_real_ip_from 204.8.96.171;
-set_real_ip_from 204.8.96.172;
-set_real_ip_from 204.8.96.173;
-set_real_ip_from 204.8.96.174;
-set_real_ip_from 204.8.96.175;
-set_real_ip_from 204.8.96.176;
-set_real_ip_from 204.8.96.177;
-set_real_ip_from 204.8.96.178;
-set_real_ip_from 204.8.96.179;
-set_real_ip_from 204.8.96.180;
-set_real_ip_from 204.8.96.181;
-set_real_ip_from 204.8.96.182;
-set_real_ip_from 204.8.96.183;
 set_real_ip_from 204.8.96.184;
 set_real_ip_from 204.8.96.185;
 set_real_ip_from 204.8.96.186;
 set_real_ip_from 204.8.96.187;
 set_real_ip_from 204.8.96.188;
-set_real_ip_from 204.8.96.189;
-set_real_ip_from 204.8.96.64;
-set_real_ip_from 204.8.96.65;
-set_real_ip_from 204.8.96.66;
-set_real_ip_from 204.8.96.67;
-set_real_ip_from 204.8.96.68;
-set_real_ip_from 204.8.96.69;
-set_real_ip_from 204.8.96.70;
-set_real_ip_from 204.8.96.71;
-set_real_ip_from 204.8.96.72;
-set_real_ip_from 204.8.96.73;
-set_real_ip_from 204.8.96.74;
-set_real_ip_from 204.8.96.75;
-set_real_ip_from 204.8.96.76;
-set_real_ip_from 204.8.96.77;
-set_real_ip_from 204.8.96.78;
-set_real_ip_from 204.8.96.79;
-set_real_ip_from 204.8.96.80;
-set_real_ip_from 204.8.96.81;
-set_real_ip_from 204.8.96.82;
-set_real_ip_from 204.8.96.83;
-set_real_ip_from 204.8.96.84;
-set_real_ip_from 204.8.96.85;
-set_real_ip_from 204.8.96.86;
-set_real_ip_from 204.8.96.87;
-set_real_ip_from 204.8.96.88;
-set_real_ip_from 204.8.96.89;
 set_real_ip_from 205.185.113.180;
 set_real_ip_from 205.185.115.216;
 set_real_ip_from 205.185.116.34;
@@ -1138,106 +1041,11 @@ set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
 set_real_ip_from 2607:f530:8002::19;
-set_real_ip_from 2620:7:6001::101;
-set_real_ip_from 2620:7:6001::102;
-set_real_ip_from 2620:7:6001::103;
-set_real_ip_from 2620:7:6001::104;
-set_real_ip_from 2620:7:6001::105;
-set_real_ip_from 2620:7:6001::106;
-set_real_ip_from 2620:7:6001::107;
-set_real_ip_from 2620:7:6001::108;
-set_real_ip_from 2620:7:6001::109;
-set_real_ip_from 2620:7:6001::110;
-set_real_ip_from 2620:7:6001::111;
-set_real_ip_from 2620:7:6001::112;
-set_real_ip_from 2620:7:6001::113;
-set_real_ip_from 2620:7:6001::114;
-set_real_ip_from 2620:7:6001::115;
-set_real_ip_from 2620:7:6001::116;
-set_real_ip_from 2620:7:6001::117;
-set_real_ip_from 2620:7:6001::118;
-set_real_ip_from 2620:7:6001::119;
-set_real_ip_from 2620:7:6001::120;
-set_real_ip_from 2620:7:6001::121;
-set_real_ip_from 2620:7:6001::122;
-set_real_ip_from 2620:7:6001::123;
-set_real_ip_from 2620:7:6001::140;
-set_real_ip_from 2620:7:6001::141;
-set_real_ip_from 2620:7:6001::142;
-set_real_ip_from 2620:7:6001::143;
-set_real_ip_from 2620:7:6001::144;
-set_real_ip_from 2620:7:6001::145;
-set_real_ip_from 2620:7:6001::146;
-set_real_ip_from 2620:7:6001::147;
-set_real_ip_from 2620:7:6001::148;
-set_real_ip_from 2620:7:6001::149;
-set_real_ip_from 2620:7:6001::150;
-set_real_ip_from 2620:7:6001::151;
-set_real_ip_from 2620:7:6001::152;
-set_real_ip_from 2620:7:6001::153;
-set_real_ip_from 2620:7:6001::154;
-set_real_ip_from 2620:7:6001::155;
-set_real_ip_from 2620:7:6001::156;
-set_real_ip_from 2620:7:6001::157;
-set_real_ip_from 2620:7:6001::158;
-set_real_ip_from 2620:7:6001::159;
-set_real_ip_from 2620:7:6001::160;
-set_real_ip_from 2620:7:6001::161;
-set_real_ip_from 2620:7:6001::162;
-set_real_ip_from 2620:7:6001::163;
-set_real_ip_from 2620:7:6001::164;
-set_real_ip_from 2620:7:6001::165;
-set_real_ip_from 2620:7:6001::166;
-set_real_ip_from 2620:7:6001::167;
-set_real_ip_from 2620:7:6001::168;
-set_real_ip_from 2620:7:6001::169;
-set_real_ip_from 2620:7:6001::170;
-set_real_ip_from 2620:7:6001::171;
-set_real_ip_from 2620:7:6001::172;
-set_real_ip_from 2620:7:6001::173;
-set_real_ip_from 2620:7:6001::174;
-set_real_ip_from 2620:7:6001::175;
-set_real_ip_from 2620:7:6001::176;
-set_real_ip_from 2620:7:6001::177;
-set_real_ip_from 2620:7:6001::178;
-set_real_ip_from 2620:7:6001::179;
-set_real_ip_from 2620:7:6001::180;
-set_real_ip_from 2620:7:6001::181;
-set_real_ip_from 2620:7:6001::182;
-set_real_ip_from 2620:7:6001::183;
 set_real_ip_from 2620:7:6001::184;
 set_real_ip_from 2620:7:6001::185;
 set_real_ip_from 2620:7:6001::186;
 set_real_ip_from 2620:7:6001::187;
 set_real_ip_from 2620:7:6001::188;
-set_real_ip_from 2620:7:6001::189;
-set_real_ip_from 2620:7:6001::e664;
-set_real_ip_from 2620:7:6001::ffff:c759:e640;
-set_real_ip_from 2620:7:6001::ffff:c759:e641;
-set_real_ip_from 2620:7:6001::ffff:c759:e642;
-set_real_ip_from 2620:7:6001::ffff:c759:e643;
-set_real_ip_from 2620:7:6001::ffff:c759:e644;
-set_real_ip_from 2620:7:6001::ffff:c759:e645;
-set_real_ip_from 2620:7:6001::ffff:c759:e646;
-set_real_ip_from 2620:7:6001::ffff:c759:e647;
-set_real_ip_from 2620:7:6001::ffff:c759:e648;
-set_real_ip_from 2620:7:6001::ffff:c759:e649;
-set_real_ip_from 2620:7:6001::ffff:c759:e64a;
-set_real_ip_from 2620:7:6001::ffff:c759:e64b;
-set_real_ip_from 2620:7:6001::ffff:c759:e64c;
-set_real_ip_from 2620:7:6001::ffff:c759:e64d;
-set_real_ip_from 2620:7:6001::ffff:c759:e64e;
-set_real_ip_from 2620:7:6001::ffff:c759:e64f;
-set_real_ip_from 2620:7:6001::ffff:c759:e650;
-set_real_ip_from 2620:7:6001::ffff:c759:e651;
-set_real_ip_from 2620:7:6001::ffff:c759:e652;
-set_real_ip_from 2620:7:6001::ffff:c759:e653;
-set_real_ip_from 2620:7:6001::ffff:c759:e654;
-set_real_ip_from 2620:7:6001::ffff:c759:e655;
-set_real_ip_from 2620:7:6001::ffff:c759:e656;
-set_real_ip_from 2620:7:6001::ffff:c759:e657;
-set_real_ip_from 2620:7:6001::ffff:c759:e658;
-set_real_ip_from 2620:7:6001::ffff:c759:e659;
 set_real_ip_from 27.255.75.198;
 set_real_ip_from 2800:ba0:6:c1::4858;
 set_real_ip_from 2a00:11c0:1c:311::5;
@@ -1723,6 +1531,7 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
+set_real_ip_from 52.44.122.243;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
@@ -1793,6 +1602,7 @@ set_real_ip_from 77.48.28.193;
 set_real_ip_from 77.48.28.204;
 set_real_ip_from 77.48.28.236;
 set_real_ip_from 77.48.28.237;
+set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 77.91.85.147;
 set_real_ip_from 77.91.86.95;
@@ -1865,6 +1675,7 @@ set_real_ip_from 91.139.160.150;
 set_real_ip_from 91.202.5.104;
 set_real_ip_from 91.203.144.194;
 set_real_ip_from 91.203.145.116;
+set_real_ip_from 91.206.26.26;
 set_real_ip_from 91.208.197.144;
 set_real_ip_from 91.208.75.153;
 set_real_ip_from 91.208.75.156;
@@ -1921,7 +1732,6 @@ set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.142.161.63;
 set_real_ip_from 95.143.193.125;
 set_real_ip_from 95.164.4.104;
-set_real_ip_from 95.164.46.204;
 set_real_ip_from 95.168.173.143;
 set_real_ip_from 95.211.210.103;
 set_real_ip_from 95.211.244.28;
