--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -30,6 +30,7 @@ set_real_ip_from 2001:678:e3c::a;
 set_real_ip_from 2001:678:e3c::b;
 set_real_ip_from 2001:678:e3c::c;
 set_real_ip_from 2001:678:e3c::d;
+set_real_ip_from 2001:67c:2044:1905::26;
 set_real_ip_from 2001:67c:2608::1;
 set_real_ip_from 2001:67c:289c::20;
 set_real_ip_from 2001:67c:289c:2::234;
@@ -243,106 +244,11 @@ set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
 set_real_ip_from 2607:f530:8002::19;
-set_real_ip_from 2620:7:6001::101;
-set_real_ip_from 2620:7:6001::102;
-set_real_ip_from 2620:7:6001::103;
-set_real_ip_from 2620:7:6001::104;
-set_real_ip_from 2620:7:6001::105;
-set_real_ip_from 2620:7:6001::106;
-set_real_ip_from 2620:7:6001::107;
-set_real_ip_from 2620:7:6001::108;
-set_real_ip_from 2620:7:6001::109;
-set_real_ip_from 2620:7:6001::110;
-set_real_ip_from 2620:7:6001::111;
-set_real_ip_from 2620:7:6001::112;
-set_real_ip_from 2620:7:6001::113;
-set_real_ip_from 2620:7:6001::114;
-set_real_ip_from 2620:7:6001::115;
-set_real_ip_from 2620:7:6001::116;
-set_real_ip_from 2620:7:6001::117;
-set_real_ip_from 2620:7:6001::118;
-set_real_ip_from 2620:7:6001::119;
-set_real_ip_from 2620:7:6001::120;
-set_real_ip_from 2620:7:6001::121;
-set_real_ip_from 2620:7:6001::122;
-set_real_ip_from 2620:7:6001::123;
-set_real_ip_from 2620:7:6001::140;
-set_real_ip_from 2620:7:6001::141;
-set_real_ip_from 2620:7:6001::142;
-set_real_ip_from 2620:7:6001::143;
-set_real_ip_from 2620:7:6001::144;
-set_real_ip_from 2620:7:6001::145;
-set_real_ip_from 2620:7:6001::146;
-set_real_ip_from 2620:7:6001::147;
-set_real_ip_from 2620:7:6001::148;
-set_real_ip_from 2620:7:6001::149;
-set_real_ip_from 2620:7:6001::150;
-set_real_ip_from 2620:7:6001::151;
-set_real_ip_from 2620:7:6001::152;
-set_real_ip_from 2620:7:6001::153;
-set_real_ip_from 2620:7:6001::154;
-set_real_ip_from 2620:7:6001::155;
-set_real_ip_from 2620:7:6001::156;
-set_real_ip_from 2620:7:6001::157;
-set_real_ip_from 2620:7:6001::158;
-set_real_ip_from 2620:7:6001::159;
-set_real_ip_from 2620:7:6001::160;
-set_real_ip_from 2620:7:6001::161;
-set_real_ip_from 2620:7:6001::162;
-set_real_ip_from 2620:7:6001::163;
-set_real_ip_from 2620:7:6001::164;
-set_real_ip_from 2620:7:6001::165;
-set_real_ip_from 2620:7:6001::166;
-set_real_ip_from 2620:7:6001::167;
-set_real_ip_from 2620:7:6001::168;
-set_real_ip_from 2620:7:6001::169;
-set_real_ip_from 2620:7:6001::170;
-set_real_ip_from 2620:7:6001::171;
-set_real_ip_from 2620:7:6001::172;
-set_real_ip_from 2620:7:6001::173;
-set_real_ip_from 2620:7:6001::174;
-set_real_ip_from 2620:7:6001::175;
-set_real_ip_from 2620:7:6001::176;
-set_real_ip_from 2620:7:6001::177;
-set_real_ip_from 2620:7:6001::178;
-set_real_ip_from 2620:7:6001::179;
-set_real_ip_from 2620:7:6001::180;
-set_real_ip_from 2620:7:6001::181;
-set_real_ip_from 2620:7:6001::182;
-set_real_ip_from 2620:7:6001::183;
 set_real_ip_from 2620:7:6001::184;
 set_real_ip_from 2620:7:6001::185;
 set_real_ip_from 2620:7:6001::186;
 set_real_ip_from 2620:7:6001::187;
 set_real_ip_from 2620:7:6001::188;
-set_real_ip_from 2620:7:6001::189;
-set_real_ip_from 2620:7:6001::e664;
-set_real_ip_from 2620:7:6001::ffff:c759:e640;
-set_real_ip_from 2620:7:6001::ffff:c759:e641;
-set_real_ip_from 2620:7:6001::ffff:c759:e642;
-set_real_ip_from 2620:7:6001::ffff:c759:e643;
-set_real_ip_from 2620:7:6001::ffff:c759:e644;
-set_real_ip_from 2620:7:6001::ffff:c759:e645;
-set_real_ip_from 2620:7:6001::ffff:c759:e646;
-set_real_ip_from 2620:7:6001::ffff:c759:e647;
-set_real_ip_from 2620:7:6001::ffff:c759:e648;
-set_real_ip_from 2620:7:6001::ffff:c759:e649;
-set_real_ip_from 2620:7:6001::ffff:c759:e64a;
-set_real_ip_from 2620:7:6001::ffff:c759:e64b;
-set_real_ip_from 2620:7:6001::ffff:c759:e64c;
-set_real_ip_from 2620:7:6001::ffff:c759:e64d;
-set_real_ip_from 2620:7:6001::ffff:c759:e64e;
-set_real_ip_from 2620:7:6001::ffff:c759:e64f;
-set_real_ip_from 2620:7:6001::ffff:c759:e650;
-set_real_ip_from 2620:7:6001::ffff:c759:e651;
-set_real_ip_from 2620:7:6001::ffff:c759:e652;
-set_real_ip_from 2620:7:6001::ffff:c759:e653;
-set_real_ip_from 2620:7:6001::ffff:c759:e654;
-set_real_ip_from 2620:7:6001::ffff:c759:e655;
-set_real_ip_from 2620:7:6001::ffff:c759:e656;
-set_real_ip_from 2620:7:6001::ffff:c759:e657;
-set_real_ip_from 2620:7:6001::ffff:c759:e658;
-set_real_ip_from 2620:7:6001::ffff:c759:e659;
 set_real_ip_from 2800:ba0:6:c1::4858;
 set_real_ip_from 2a00:11c0:1c:311::5;
 set_real_ip_from 2a00:11c0:1f:1::55;
